--- a/_posts/2020-10-06-闲谈-我的第一篇博客.md
+++ b/_posts/2020-10-06-闲谈-我的第一篇博客.md
@@ -8,7 +8,7 @@ tags:
     - 闲谈
 ---
 
-# 一、第一
+# 一、我的第一篇博客
 
-web应用采用browser/server架构，http作为通信协议。http是无状态协议，浏览器的每一次请求，服务器会独立处理，不与之前或之后的请求产生关联，这个过程用下图说明，三次请求/响应对之间没有任何联系
+我的个人博客的初版算是有了一个样子，目前能够上传博客内容了。模板来自wblearn大佬在github上的repository。因为本人还不太熟悉博客制作，一些个性化的内容就暂时直接删掉了，以后会慢慢添加。
 
