--- a/_posts/2020-10-07-Kpop-最优秀女团口号.md
+++ b/_posts/2020-10-07-Kpop-最优秀女团口号.md
@@ -10,6 +10,8 @@ tags:
 
 # 最优秀的女团口号
 
+<p>前言：<br>最初涉略韩国女团，是大约大二的时候室友开始听少女时代，跟着听了一些发现这样的和声从未听过，一首歌里呈现的是9个人的默契，9人的声音呈现了不同的texture。听歌之余开始看07年以来的综艺，也因此入了韩综的坑，当然这是另一个话题了。就听歌时间线来讲，整体来说，在930事件之前，我主要以少女时代的歌为主来听，毕竟数量和种类都够多，当然也少量听一些其他大热歌曲，不限男团、女团、solo。930事件之后，个人一段时间里无法再听少女时代的歌（事实上过了很久才能再听），那时候转为以韩综为主，这时候各种节目中出来宣传的团体也有了更多了解。<br>就个人而言，比较重视旋律，歌词次之，dance再次，beat更次，所以女团歌曲听得多些，毕竟大多数男团歌的主打为了展现雄性魅力通常制作的比较吵（但是BigBang、INFINITE、BTOB、EXO、BTS等团的部分歌我也听）。女团市场看了这么久，作为女团爱好者，我更看重一个group的teamwork和公司策划的合理性、契合度，这是一个比较宽泛的话题，以后有机会再聊。<br>女团的口号是一个团体开口的初印象，虽然事实上如今更侧重于粉丝导向的女团市场已经不再重视这个，但是我个人认为一个团体的方方面面都很重要，尤其是长期和团体绑定的东西，包括口号、问候法、世界观、position、曲风等等。下面列举的三个团体是目前我所见过的最好的女团口号，简单又有内容，和本身的品牌形象也达到了极大的契合度。</p>
+
 ### 1、소녀시대（少女时代，girls' generation)
 
 #### 口号&问候法
@@ -23,11 +25,11 @@ tags:
 
 #### 口号&问候法
 
-<p>Yes, I love it! 안녕하세요，아이오아이 입니다。<br>Yes, I love it! 大家好我们是I.O.I。<br></p>
+<p>Yes, I love it! 안녕하세요，아이오아이 입니다。<br>Yes, I love it! 大家好，我们是I.O.I。<br></p>
 
 #### 意义
 
-<p>当初的她们作为懵懂的追梦女孩，代表了苦苦挣扎的练习生们。也许一开始不是所有人都有坚定的信念去以idol出道为梦想和目标，但她们作为I.O.I的日子里一定领会到了一点，就是她们已经爱上了这条路。</p>
+<p>当初的她们作为懵懂的追梦女孩，代表了许许多多苦苦挣扎的练习生们。对于练习生来说，也许一开始大家只是因为兴趣所在，但是时间的流逝和竞争的残酷常常会让她们心灰意冷，于是当出现了一个机会的时候大家都拼尽全力。11人的她们代表了那一批孩子的梦想，而且遗憾的是解散后由于各自公司的运营能力参差不齐，她们中的不少人并没有如愿地走上成功的道路。但是，她们作为I.O.I的日子里一定感受到了奋斗的汗水有了收获的感觉，那时的她们一定是爱着被称为“爱豆”的职业的。</p>
 
 ### 3、OH MY GIRL(오마이걸)
 
@@ -37,5 +39,5 @@ tags:
 
 #### 意义
 
-<p>她们一直是这样会心地打招呼，她们的舞台表现、努力程度、综艺效果、成员感情、音乐态度会让人忽略原本在这样的市场上大家以为很重要的颜值和市场营销。她们的音乐深入人心，形象容易亲近，感情有口皆碑，在这样复杂的女团市场中，即使不经意看到了她们的节目、听到了她们的音乐，也会让人想要多了解一点。了解过后，你就会说出那句话，找到了，OH MY GIRL。</p>
+<p>女团市场上，她们其实是少见的。她们一直是会心地打招呼，她们的舞台表现、努力程度、综艺效果、成员感情、音乐态度会让人忽略原本在这样的市场上大家以为很重要的颜值和市场营销。她们的音乐深入人心，形象容易亲近，感情有口皆碑，在这样复杂的女团市场中，如果你是一个偏爱纯净的人，你一定会喜欢她们的歌。我最喜欢的就是她们纯净的感觉，也常常戏称她们才是全团都是girl的girl group。她们的感情让人感到真诚，有时候会让人会心一笑，说着：找到了，OH MY GIRL。</p>
 
