--- a/_posts/2020-10-07-Kpop-最优秀女团口号.md
+++ b/_posts/2020-10-07-Kpop-最优秀女团口号.md
@@ -10,7 +10,7 @@ tags:
 
 # 最优秀的女团口号
 
-<p>前言：<br>最初涉略韩国女团，是大约大二的时候室友开始听少女时代，跟着听了一些发现这样的和声从未听过，一首歌里呈现的是9个人的默契，9人的声音呈现了不同的texture。听歌之余开始看07年以来的综艺，也因此入了韩综的坑，当然这是另一个话题了。就听歌时间线来讲，整体来说，在930事件之前，我主要以少女时代的歌为主来听，毕竟数量和种类都够多，当然也少量听一些其他大热歌曲，不限男团、女团、solo。930事件之后，个人一段时间里无法再听少女时代的歌（事实上过了很久才能再听），那时候转为以韩综为主，这时候各种节目中出来宣传的团体也有了更多了解。<br>就个人而言，比较重视旋律，歌词次之，dance再次，beat更次，所以女团歌曲听得多些，毕竟大多数男团歌的主打为了展现雄性魅力通常制作的比较吵（但是BigBang、INFINITE、BTOB、EXO、BTS等团的部分歌我也听）。女团市场看了这么久，作为女团爱好者，我更看重一个group的teamwork和公司策划的合理性、契合度，这是一个比较宽泛的话题，以后有机会再聊。<br>女团的口号是一个团体开口的初印象，虽然事实上如今更侧重于粉丝导向的女团市场已经不再重视这个，但是我个人认为一个团体的方方面面都很重要，尤其是长期和团体绑定的东西，包括口号、问候法、世界观、position、曲风等等。下面列举的三个团体是目前我所见过的最好的女团口号，简单又有内容，和本身的品牌形象也达到了极大的契合度。</p>
+<p>前言：<br>最初涉略韩国女团，是大约大二的时候室友开始听少女时代，跟着听了一些发现这样的和声从未听过，一首歌里呈现的是9个人的默契，9人的声音呈现了不同的texture。听歌之余开始看07年以来的综艺，也因此入了韩综的坑，当然这是另一个话题了。就听歌时间线来讲，整体来说，在930事件之前，我主要以少女时代的歌为主来听，毕竟数量和种类都够多，当然也少量听一些其他大热歌曲，不限男团、女团、solo。930事件之后，个人一段时间里无法再听少女时代的歌（事实上过了很久才能再听），那时候转为以韩综为主，这时候各种节目中出来宣传的团体也有了更多了解。<br></p><p>就个人而言，比较重视旋律，歌词次之，dance再次，beat更次，所以女团歌曲听得多些，毕竟大多数男团歌的主打为了展现雄性魅力通常制作的比较吵（但是BigBang、INFINITE、BTOB、EXO、BTS等团的部分歌我也听）。女团市场看了这么久，作为女团爱好者，我更看重一个group的teamwork和公司策划的合理性、契合度，这是一个比较宽泛的话题，以后有机会再聊。<br></p><p>女团的口号是一个团体开口的初印象，虽然事实上如今更侧重于粉丝导向的女团市场已经不再重视这个，但是我个人认为一个团体的方方面面都很重要，尤其是长期和团体绑定的东西，包括口号、问候法、世界观、position、曲风等等。下面列举的三个团体是目前我所见过的最好的女团口号，简单又有内容，和本身的品牌形象也达到了极大的契合度。</p>
 
 ### 1、소녀시대（少女时代，girls' generation)
 
